Add GitHub repo link to manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "ExtraChallengeShrines",
   "version_number": "1.0.1",
-  "website_url": "",
+  "website_url": "https://github.com/TheMysticSword/ExtraChallengeShrines",
   "description": "Adds new Shrine of the Mountain-like shrines that affect boss fights and their rewards",
   "dependencies": [
     "bbepis-BepInExPack-5.4.1905",
