--- a/ExtraChallengeShrines.csproj
+++ b/ExtraChallengeShrines.csproj
@@ -5,24 +5,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BepInEx.Analyzers" Version="1.0.6">
+    <PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="BepInEx.Core" Version="5.4.16" />
+    <PackageReference Include="BepInEx.Core" Version="5.4.19" />
     <PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.4-r.0" />
     <PackageReference Include="UnityEngine.Modules" Version="2019.4.26" />
+    <PackageReference Include="MMHOOK.RoR2" Version="2022.9.20">
+      <NoWarn>NU1701</NoWarn>
+    </PackageReference>
+    <PackageReference Include="R2API" Version="4.3.5" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="MMHOOK_RoR2">
-      <HintPath>..\..\..\..\Risk of Rain 2\Modding References\MMHOOK_RoR2.dll</HintPath>
-    </Reference>
     <Reference Include="MysticsRisky2Utils">
       <HintPath>..\..\..\..\Risk of Rain 2\Modding References\MysticsRisky2Utils.dll</HintPath>
-    </Reference>
-    <Reference Include="R2API">
-      <HintPath>..\..\..\..\Risk of Rain 2\Modding References\R2API.dll</HintPath>
     </Reference>
     <Reference Include="Unity.ResourceManager">
       <HintPath>..\..\..\..\Risk of Rain 2\Modding References\Managed\Unity.ResourceManager.dll</HintPath>
