--- a/ExtraChallengeShrines.csproj
+++ b/ExtraChallengeShrines.csproj
@@ -1,29 +1,99 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="BepInEx.Core" Version="5.4.19" />
-    <PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.4-r.0" />
-    <PackageReference Include="UnityEngine.Modules" Version="2019.4.26" />
-    <PackageReference Include="MMHOOK.RoR2" Version="2022.9.20">
-      <NoWarn>NU1701</NoWarn>
-    </PackageReference>
-    <PackageReference Include="R2API" Version="4.3.5" />
+	  <PackageReference Include="BepInEx.Core" Version="5.*" />
+	  <PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.2-r.1" />
+	  <PackageReference Include="UnityEngine.Modules" Version="2021.3.33" />
+	  <PackageReference Include="MMHOOK.RoR2" Version="2024.9.5">
+		  <NoWarn>NU1701</NoWarn>
+	  </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="MysticsRisky2Utils">
-      <HintPath>..\..\..\..\Risk of Rain 2\Modding References\MysticsRisky2Utils.dll</HintPath>
+      <HintPath>..\libs\MysticsRisky2Utils-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API">
+      <HintPath>..\libs\R2API-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Addressables">
+      <HintPath>..\libs\R2API.Addressables-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.ArtifactCode">
+      <HintPath>..\libs\R2API.ArtifactCode-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.CommandHelper">
+      <HintPath>..\libs\R2API.CommandHelper-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.ContentManagement">
+      <HintPath>..\libs\R2API.ContentManagement-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Core">
+      <HintPath>..\libs\R2API.Core-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.DamageType">
+      <HintPath>..\libs\R2API.DamageType-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Deployable">
+      <HintPath>..\libs\R2API.Deployable-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Difficulty">
+      <HintPath>..\libs\R2API.Difficulty-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Director">
+      <HintPath>..\libs\R2API.Director-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Dot">
+      <HintPath>..\libs\R2API.Dot-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Elites">
+      <HintPath>..\libs\R2API.Elites-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Items">
+      <HintPath>..\libs\R2API.Items-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Language">
+      <HintPath>..\libs\R2API.Language-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Loadout">
+      <HintPath>..\libs\R2API.Loadout-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.LobbyConfig">
+      <HintPath>..\libs\R2API.LobbyConfig-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Networking">
+      <HintPath>..\libs\R2API.Networking-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Orb">
+      <HintPath>..\libs\R2API.Orb-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Prefab">
+      <HintPath>..\libs\R2API.Prefab-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.RecalculateStats">
+      <HintPath>..\libs\R2API.RecalculateStats-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.SceneAsset">
+      <HintPath>..\libs\R2API.SceneAsset-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Skins">
+      <HintPath>..\libs\R2API.Skins-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Sound">
+      <HintPath>..\libs\R2API.Sound-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.TempVisualEffect">
+      <HintPath>..\libs\R2API.TempVisualEffect-nstrip.dll</HintPath>
+    </Reference>
+    <Reference Include="R2API.Unlockable">
+      <HintPath>..\libs\R2API.Unlockable-nstrip.dll</HintPath>
     </Reference>
     <Reference Include="Unity.ResourceManager">
-      <HintPath>..\..\..\..\Risk of Rain 2\Modding References\Managed\Unity.ResourceManager.dll</HintPath>
+      <HintPath>..\..\lib\Unity.ResourceManager-nstrip.dll</HintPath>
     </Reference>
   </ItemGroup>
 
